	* added missing functions to python binding related to torrent creation
	* fixed to add filename on web seed urls that lack it
	* fixed BOOST_ASIO_HASH_MAP_BUCKETS define for boost 1.39
	* fixed checking of fast and suggest messages when used with magnet links
	* fixed bug where web seeds would not disconnect if being resolved when
	  the torrent was paused

release 0.14.5

	* fixed bug when handling malformed webseed urls and an http proxy
	* fixed bug when setting unlimited upload or download rates for torrents
	* fix to make torrent_status::list_peers more accurate.
	* fixed memory leak in disk io thread when not using the cache
	* fixed bug in connect candidate counter
	* allow 0 upload slots
	* fixed bug in rename_file(). The new name would not always be saved in
	  the resume data
	* fixed resume data compatibility with 0.13
	* fixed rare piece-picker bug
	* fixed bug where one allowed-fast message would be sent even when
	  disabled
	* fixed race condition in UPnP which could lead to crash
	* fixed inversed seed_time ratio logic
	* added get_ip_filter() to session

release 0.14.4

	* connect candidate calculation fix
	* tightened up disk cache memory usage
	* fixed magnet link parser to accept hex-encoded info-hashes
	* fixed inverted logic when picking which peers to connect to
	  (should mean a slight performance improvement)
	* fixed a bug where a failed rename_file() would leave the storage
	  in an error state which would pause the torrent
	* fixed case when move_storage() would fail. Added a new alert
	  to be posted when it does
	* fixed crash bug when shutting down while checking a torrent
	* fixed handling of web seed urls that didn't end with a
	  slash for multi-file torrents
	* lowered the default connection speed to 10 connection attempts
	  per second
	* optimized memory usage when checking files fails
	* fixed bug when checking a torrent twice
	* improved handling of out-of-memory conditions in disk I/O thread